--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -43,9 +43,8 @@
             <%})%>
           </select>
 		  <br>
-		  <input type="submit" value="Enviar">
+		  <input type="submit" value="Enviar" onclick="{alert('¡Membresia agregada Correctamente!')};">
       </form>
-      <br><br>
-      
+      <br><br> 
 </body>
 </html>
